--- a/daon/bbq.html
+++ b/daon/bbq.html
@@ -10,7 +10,7 @@
         <!-- include jQuery & cycle2 -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <script src="http://malsup.github.com/jquery.cycle2.js"></script>
-    
+        <script src="//cdn.rawgit.com/fdaciuk/ajax/v3.0.4/dist/ajax.min.js"></script>
 
 </head>
 <body>
