--- a/daon/index.html
+++ b/daon/index.html
@@ -7,6 +7,7 @@
 	<meta property="og:title"              content="DAON" />
 	<meta property="og:description"        content="다온펜션에서 당신을 기다립니다" />
     <meta property="og:image"              content="/imgs/room/loveroom_101_02" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
     <title>DAON</title>
     <link href="css/main.css" rel="stylesheet">
@@ -17,6 +18,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="http://malsup.github.com/jquery.cycle2.js"></script>
     <script src="//cdn.rawgit.com/fdaciuk/ajax/v3.0.4/dist/ajax.min.js"></script>
+    
 </head>
 
 
