--- a/daon/index.html
+++ b/daon/index.html
@@ -6,7 +6,7 @@
     <meta property="og:url"                content="https://ahnhojeong.github.io/daon/daon/" />
 	<meta property="og:title"              content="DAON" />
 	<meta property="og:description"        content="다온펜션에서 당신을 기다립니다" />
-    <meta property="og:image"              content="/imgs/room/loveroom_101_02" />
+    <meta property="og:image"              content="imgs/room/loveroom_101_02.jpg" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
     <title>DAON</title>
