--- a/daon/reservation.html
+++ b/daon/reservation.html
@@ -99,34 +99,35 @@
                 <p>다온펜션의 환불규정 안내입니다. (환불규정은 공정거래 위원회 규정을 준수합니다.)</p>
                 <p>눈이 오면 펜션 영업을 못하는 관계로 100%환불 가능합니다.</p>
             <article class="refund">
-            <table border="1" cellspacing="0" cellpadding="10">
-                <thead>  
-                    <tr>
-                        <th>입실일기준</th>
-                        <th>당일~1일전</th>
-                        <th>3~4일전</th>
-                        <th>5일전</th>
-                        <th>7일전</th>
-                        <th>10일전</th>
-                        <th>예약취소시
-                            기본수수료</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>0%</td>
-                        <td>20%</td>
-                        <td>50%</td>
-                        <td>70%</td>
-                        <td>90%</td>
-                        <td>90%</td>
-                        <td>10%</td>
-                    </tr>
-                </tbody>
+            <table>
+                <caption>환불규정</caption>
+                    <thead>  
+                        <tr>
+                            <th scope="col">입실일기준</th>
+                            <th scope="col">당일~1일전</th>
+                            <th scope="col">3~4일전</th>
+                            <th scope="col">5일전</th>
+                            <th scope="col">7일전</th>
+                            <th scope="col">10일전</th>
+                            <th scope="col">예약취소시
+                                기본수수료</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td scope="row">0%</td>
+                            <td scope="row">20%</td>
+                            <td scope="row">50%</td>
+                            <td scope="row">70%</td>
+                            <td scope="row">90%</td>
+                            <td scope="row">90%</td>
+                            <td scope="row">10%</td>
+                        </tr>
+                    </tbody>
             </table>
             </article>
             </div>
-            </article>
+        </article>
     </main>
 
     
