--- a/daon/bbq.html
+++ b/daon/bbq.html
@@ -7,6 +7,7 @@
     <title>BBQ</title>
     <link href="css/special.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
+    
 
         <!-- include jQuery & cycle2 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -108,7 +109,7 @@
                     data-cycle-pager=".banner .pager"
                     
                     >
-                        <img src="imgs/bbq_01-1.jpg" alt="slide1">
+                        <img src="imgs/bbq_01.jpg" alt="slide1">
                         <img src="imgs/bbq_02.jpg" alt="slide2">
                         <img src="imgs/bbq_03.jpg" alt="slide3">
                     </div>
