--- a/daon/reservation.html
+++ b/daon/reservation.html
@@ -6,6 +6,7 @@
     <title>reservation</title>
     <link href="css/reservation.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -128,6 +129,12 @@
             </article>
             </div>
         </article>
+        <div class="fixed">
+            <a href="#">
+                <i class="fas fa-arrow-up"></i>
+                <span>TOP</span>
+            </a>
+        </div>
     </main>
 
     
