--- a/daon/skypark.html
+++ b/daon/skypark.html
@@ -106,7 +106,7 @@
                     data-cycle-pager=".banner .pager"
                     
                     >
-                        <img src="imgs/skypark_01-2.jpg" alt="slide1">
+                        <img src="imgs/skypark_01.jpg" alt="slide1">
                         <img src="imgs/skypark_02.jpg" alt="slide2">
                         <img src="imgs/skypark_03.jpg" alt="slide3">
                     </div>
