--- a/daon/index.html
+++ b/daon/index.html
@@ -13,6 +13,9 @@
     <link href="css/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
     <link href="imgs/favicon-daon.ico" type="image/x-icon" rel="shortcut icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- include jQuery & cycle2 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -24,49 +27,7 @@
 
 <body>
     <header>
-        <article class="head">
-            <h1><a href="index.html">DAON</a></h1>
 
-            <input type="checkbox" class="openmenu" id="openmenu">
-            <label for="openmenu" class="burger">
-                <i class="fa fa-bars"></i>
-            </label>
-
-            <nav class="menu">
-                <ul>
-                    <li>
-                        <a href="prologue.html">ABOUT</a>
-                        <ul class="submenu">
-                            <li><a href="prologue.html">펜션소개</a></li>
-                            <li><a href="travel.html">주변여행지</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="room.html">ROOM</a>
-                        <ul class="submenu">
-                            <li><a href="room.html">미리보기</a></li>
-                            <li><a href="layout.html">펜션배치도</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="bbq.html">SPECIAL</a>
-                        <ul class="submenu">
-                            <li><a href="bbq.html">BBQ</a></li>
-                            <li><a href="swimming.html">야외수영장</a></li>
-                            <li><a href="skypark.html">옥상정원</a></li>
-                            <li><a href="cafeteria.html">카페테리아</a></li>
-                        </ul>
-                    </li>
-                    <li class="last">
-                        <a href="reservation.html">RESERVATION</a>
-                        <ul class="submenu">
-                            <li><a href="reservation.html">예약안내</a></li>
-                            <li><a href="https://bit.ly/38Zeuef">실시간예약</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </article>
     </header>
 
     <main>
@@ -162,35 +123,21 @@
 
         <div class="schejule">
             <a href="#">
-                <i class="far fa-clock"></i>
+                <i class="far fa-clock time"></i>
             </a>
         </div>
-        <div class=fixed>
-            <div>
+        <div class="fixed">
             <a href="#">
                 <i class="fas fa-arrow-up"></i>
                 <span>TOP</span>
             </a>
-            </div>
         </div>
 
     </main>
 
 
     <footer>
-        <div class="foot">
-            <div>
-            <p>T.010-3923-0662</p>
-            <ul>
-                <li>주소 : 경기 가평군 가평읍 강변안로 357-187</li>
-                <li>업체명 : 다온</li>
-                <li>대표자 : 박춘하</li>
-                <li>사업자번호 : 286-11-00158</li>
-            </ul>
-            <small>@COPYRIGHT2021</small>
-            <a href="#">개인정보처리방침</a>
-            </div>
-        </div>
+
     </footer>
 
 </body>
