--- a/daon/travel.html
+++ b/daon/travel.html
@@ -6,6 +6,9 @@
     <title>travel</title>
     <link href="css/travel.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -216,6 +219,18 @@
             </ul>
         </article>
     </article>
+
+    <div class="schejule">
+        <a href="#">
+            <i class="far fa-clock time"></i>
+        </a>
+    </div>
+    <div class="fixed">
+        <a href="#">
+            <i class="fas fa-arrow-up"></i>
+            <span>TOP</span>
+        </a>
+    </div>
 </main>
 
     <footer>
