--- a/daon/inc.html
+++ b/daon/inc.html
@@ -26,7 +26,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="special.html#2">SPECIAL</a>
+                    <a href="bbq.html#2">SPECIAL</a>
                     <ul class="submenu">
                         <li><a href="bbq.html">BBQ</a></li>
                         <li><a href="swimming.html">야외수영장</a></li>
