--- a/daon/layout.html
+++ b/daon/layout.html
@@ -85,6 +85,18 @@
                 <img src="imgs/pension_layout.jpg" alt="pensionlayout">
             </div>
         </article>
+
+        <div class="schejule">
+            <a href="#">
+                <i class="far fa-clock time"></i>
+            </a>
+        </div>
+        <div class="fixed">
+            <a href="#">
+                <i class="fas fa-arrow-up"></i>
+                <span>TOP</span>
+            </a>
+        </div>
     </main>
 
     <footer>
