--- a/daon/room.html
+++ b/daon/room.html
@@ -56,7 +56,7 @@
                     </div>
                     <div>
                         <figure>
-                            <img src="imgs/only_room_101.jpg" alt="onlyroom101">
+                            <img src="imgs/room/onlyroom_101_02.jpg" alt="onlyroom101">
                             <figcaption>
                                 <a href="#">VIEW MORE</a>
                             </figcaption>
@@ -79,7 +79,7 @@
                     </div>
                     <div>
                         <figure>
-                            <img src="imgs/only_room_102.jpg" alt="onlyroom102">
+                            <img src="imgs/room/onlyroom_102_02.jpg" alt="onlyroom102">
                             <figcaption>
                                 <a href="#">VIEW MORE</a>
                             </figcaption>
@@ -102,7 +102,7 @@
                     </div>
                     <div>
                         <figure>
-                            <img src="imgs/love_room_101.jpg" alt="loveroom101">
+                            <img src="imgs/room/loveroom_101_02.jpg" alt="loveroom101">
                             <figcaption>
                                 <a href="#">VIEW MORE</a>
                             </figcaption>
@@ -125,7 +125,7 @@
                     </div>
                     <div>
                         <figure>
-                            <img src="imgs/love_room_102.jpg" alt="loveroom102">
+                            <img src="imgs/room/loveroom_102_02.jpg" alt="loveroom102">
                             <figcaption>
                                 <a href="#">VIEW MORE</a>
                             </figcaption>
@@ -165,8 +165,8 @@
                             <li></li>
                         </ul>
                     </div>
-
                 </div>
+                
                 <article class="popup">
                     <div class="popup_all">
                         <h2>Only You ROOM 101</h2>
@@ -240,16 +240,18 @@
         <div class="mainspot only102">
             <div class="slide">
                 <div class="slidewrap">
-                    <div class="room_photo">
-                        <figure>
-                            <img src="imgs/room/onlyroom_102_01.jpg" alt="onlyroom102">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/onlyroom_102_02.jpg" alt="onlyroom102">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/onlyroom_102_03.jpg" alt="onlyroom102">
-                        </figure>
+                    <div class="room_photo slider">
+                        <div class="regular">
+                            <figure>
+                                <img src="imgs/room/onlyroom_102_01.jpg" alt="onlyroom102">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/onlyroom_102_02.jpg" alt="onlyroom102">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/onlyroom_102_03.jpg" alt="onlyroom102">
+                            </figure>
+                        </div>
                     </div>
 
                     <div class="direc">
@@ -341,16 +343,18 @@
         <div class="mainspot love101">
             <div class="slide">
                 <div class="slidewrap">
-                    <div class="room_photo">
-                        <figure>
-                            <img src="imgs/room/loveroom_101_01.jpg" alt="loveroom101">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/loveroom_101_02.jpg" alt="loveroom101">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/loveroom_101_03.jpg" alt="loveroom101">
-                        </figure>
+                    <div class="room_photo slider">
+                        <div class="regular">
+                            <figure>
+                                <img src="imgs/room/loveroom_101_01.jpg" alt="loveroom101">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/loveroom_101_02.jpg" alt="loveroom101">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/loveroom_101_03.jpg" alt="loveroom101">
+                            </figure>
+                        </div>
                     </div>
 
                     <div class="direc">
@@ -442,16 +446,18 @@
         <div class="mainspot love102">
             <div class="slide">
                 <div class="slidewrap">
-                    <div class="room_photo">
-                        <figure>
-                            <img src="imgs/room/loveroom_102_01.jpg" alt="loveroom102">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/loveroom_102_02.jpg" alt="loveroom102">
-                        </figure>
-                        <figure>
-                            <img src="imgs/room/loveroom_102_03.jpg" alt="loveroom102">
-                        </figure>
+                    <div class="room_photo slider">
+                        <div class="regular">
+                            <figure>
+                                <img src="imgs/room/loveroom_102_01.jpg" alt="loveroom102">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/loveroom_102_02.jpg" alt="loveroom102">
+                            </figure>
+                            <figure>
+                                <img src="imgs/room/loveroom_102_03.jpg" alt="loveroom102">
+                            </figure>
+                        </div>
                     </div>
 
                     <div class="direc">
@@ -543,12 +549,12 @@
 
         <div class="schejule">
             <a href="#">
-                <i class="far fa-clock time"></i>
+                <i class="far fa-bell bell"></i>
             </a>
         </div>
         <div class="fixed">
             <a href="#">
-                <i class="fas fa-arrow-up"></i>
+                <i class="fas fa-chevron-up"></i>
                 <span>TOP</span>
             </a>
         </div>
