--- a/daon/special.html
+++ b/daon/special.html
@@ -107,6 +107,17 @@
                 </div>
             </article>
         </article>
+        <div class="schejule">
+            <a href="#">
+                <i class="far fa-bell bell"></i>
+            </a>
+        </div>
+        <div class="fixed">
+            <a href="#">
+                <i class="fas fa-chevron-up"></i>
+                <span>TOP</span>
+            </a>
+        </div>
     </main>
 
     
