--- a/daon/reservation.html
+++ b/daon/reservation.html
@@ -129,12 +129,18 @@
             </article>
             </div>
         </article>
+        <div class="schejule">
+            <a href="#">
+                <i class="far fa-bell bell"></i>
+            </a>
+        </div>
         <div class="fixed">
             <a href="#">
-                <i class="fas fa-arrow-up"></i>
+                <i class="fas fa-chevron-up"></i>
                 <span>TOP</span>
             </a>
         </div>
+
     </main>
 
     
