--- a/daon/travel.html
+++ b/daon/travel.html
@@ -222,12 +222,12 @@
 
     <div class="schejule">
         <a href="#">
-            <i class="far fa-clock time"></i>
+            <i class="far fa-bell bell"></i>
         </a>
     </div>
     <div class="fixed">
         <a href="#">
-            <i class="fas fa-arrow-up"></i>
+            <i class="fas fa-chevron-up"></i>
             <span>TOP</span>
         </a>
     </div>
