--- a/daon/index.html
+++ b/daon/index.html
@@ -92,20 +92,24 @@
         <ul class="main_con1">
             <li>
                 <figure><img src="imgs/land_scape.jpg" alt="daon pension landscape"></figure>
-                <div>
-                    <h3>Watch the most beautiful Landscape</h3>
-                    <p>가평의 대자연을 품은 다온의
-                    경치를 확인해보세요</p>
-                    <a href="prologue.html">VIEW MORE</a>
+                <div class="maintxt-wrap">
+                    <div class="main_txt-right">
+                        <h3>Watch the most beautiful Landscape</h3>
+                        <p>가평의 대자연을 품은 다온의
+                        경치를 확인해보세요</p>
+                        <a href="prologue.html">VIEW MORE</a>
+                    </div>
                 </div>
             </li>
             <li>
                 <figure><img src="imgs/main_con2.jpg" alt="daon pension Facilities"></figure>
-                <div>
-                    <h3>Watch altimate Facilities</h3>
-                    <p>차원이 다른 다온의
-                    특별한 시설을 만나보세요</p>
-                    <a href="bbq.html">VIEW MORE</a>
+                <div class="maintxt-wrap">
+                    <div class="main_txt-left">
+                        <h3>Watch altimate Facilities</h3>
+                        <p>차원이 다른 다온의
+                        특별한 시설을 만나보세요</p>
+                        <a href="bbq.html">VIEW MORE</a>
+                    </div>
                 </div>
             </li>
         </ul>
