--- a/daon/prologue.html
+++ b/daon/prologue.html
@@ -47,7 +47,7 @@
 
             <article class="prologue_wel">
             <div>
-                <figure><img src="imgs/about_santorini.png" alt="welcome"></figure>
+                <figure><img src="imgs/about_01.jpg" alt="welcome"></figure>
                 <p>
                     <b>어서오세요.
                         평생 잊지 못할 추억을 만드는 곳,
@@ -58,15 +58,14 @@
                         힐링 할 수 있는 펜션입니다.
                     </span>
                     <span>에메랄드 빛 지중해와 그리스 산토리니를
-                        마음속에 품고 멋진 추억을
-                        만들어 가시기 바래요.
+                        마음속에 품고 멋진 추억을 만들어 가시기 바래요.
                     </span>
                 </p>
             </div>
-            <div>
-                <figure><img src="imgs/about_01.png" alt="aboutus"></figure>
-                <figure><img src="imgs/about_02.png" alt="aboutus"></figure>
-                <figure><img src="imgs/about_03.png" alt="aboutus"></figure>
+            <div class="about-img">
+                <figure class="about-img-one"><img src="imgs/about_02.jpg" alt="aboutus"></figure>
+                <figure class="about-img-two"><img src="imgs/about_03.jpg" alt="aboutus"></figure>
+                <figure class="about-img-three"><img src="imgs/about_04.jpg" alt="aboutus"></figure>
             </div>
             </article>
         </article>
