--- a/daon/room.html
+++ b/daon/room.html
@@ -153,8 +153,8 @@
                     </div>
                     <div class="direc">
                         <div>
-                            <i class="fas fa-chevron-left prev"></i>
-                            <i class="fas fa-chevron-right next"></i>
+                            <img src="imgs/arrow-left.png" alt="left">
+                            <img src="imgs/arrow-right.png" alt="right">
                         </div>
                     </div>
 
@@ -256,8 +256,8 @@
 
                     <div class="direc">
                         <div>
-                            <i class="fas fa-chevron-left prev"></i>
-                            <i class="fas fa-chevron-right next"></i>
+                            <img src="imgs/arrow-left.png" alt="left">
+                            <img src="imgs/arrow-right.png" alt="right">
                         </div>
                     </div>
 
@@ -359,8 +359,8 @@
 
                     <div class="direc">
                         <div>
-                            <i class="fas fa-chevron-left prev"></i>
-                            <i class="fas fa-chevron-right next"></i>
+                            <img src="imgs/arrow-left.png" alt="left">
+                            <img src="imgs/arrow-right.png" alt="right">
                         </div>
                     </div>
 
@@ -462,8 +462,8 @@
 
                     <div class="direc">
                         <div>
-                            <i class="fas fa-chevron-left prev"></i>
-                            <i class="fas fa-chevron-right next"></i>
+                            <img src="imgs/arrow-left.png" alt="left">
+                            <img src="imgs/arrow-right.png" alt="right">
                         </div>
                     </div>
 
