--- a/daon/travel.html
+++ b/daon/travel.html
@@ -137,7 +137,7 @@
         </div>
 
         <article class="food">
-            <ul>
+            <ul class="foodwrap">
                 <li>
                     <div><img src="imgs/food1.jpg" alt="food"></div>
                     <div>
@@ -145,16 +145,24 @@
                         <small>힐링 닭갈비</small></h3>
                         <p>국내산 재료만 취급하는 남이섬 1등 철판 닭갈비집!
                             닭갈비 다 먹고 볶음밥까지 필수~!</p>
-                        <aside>
-                            <span>0507-1400-5402
-                            </span>
-                            <span>경기 가평군 가평읍 북한강변로 1083 힐링닭갈비
-                            </span>
-                            <span>매일 10:00 - 21:00
-                            </span>
-                            <span>단체석, 주차, 포장, 예약, 반려동물 동반, 남/녀 화장실 구분
-                            </span>
-                        </aside>
+                        <ul class="food-info">
+                            <li>
+                                <span><i class="fas fa-phone-alt icon"></i></span>
+                                <span>0507-1400-5402</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-map-marker-alt icon"></i></span>
+                                <span>경기 가평군 가평읍 북한강변로 1083 힐링닭갈비</span>
+                            </li>
+                            <li>
+                                <span><i class="far fa-clock icon"></i></span>
+                                <span>매일 10:00 - 21:00</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-store icon"></i></span>
+                                <span>단체석, 주차, 포장, 예약, 반려동물 동반, 남/녀 화장실 구분</span>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li>
@@ -164,17 +172,26 @@
                         <small>동기간</small></h3>
                         <p>생방송투데이, 수요미식회 등
                         다수의 TV방송에서도 인정한 진한 닭백숙 맛집!</p>
-                        <aside>
-                            <span>031-581-5570
-                            </span>
-                            <span>경기 가평군 가평읍 보납로 459-158 동기간
-                            </span>
-                            <span>평일 11:00 - 20:00 명절 휴무 브레이크타임 16:20~17:00
-                                주말 10:30 - 21:00 
-                            </span>
-                            <span>단체석, 주차, 포장, 예약
-                            </span>
-                        </aside>
+                        <ul class="food-info">
+                            <li>
+                                <span><i class="fas fa-phone-alt icon"></i></span>
+                                <span>031-581-5570</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-map-marker-alt icon"></i></span>
+                                <span>경기 가평군 가평읍 보납로 459-158 동기간</span>
+                            </li>
+                            <li>
+                                <span><i class="far fa-clock icon"></i></span>
+                                <span>평일 11:00 - 20:00 명절 휴무 브레이크타임 16:20~17:00
+                                    주말 10:30 - 21:00
+                                </span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-store icon"></i></span>
+                                <span>단체석, 주차, 포장, 예약</span>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li>
@@ -183,17 +200,27 @@
                         <h3>현지인 추천 맛집 리스트 03.
                         <small>자연다슬기해장국</small></h3>
                         <p>된장국 베이스에 다슬기와 부추, 버섯이
-                            가득 들어 있는 속 풀리는 시원한 해장국!</p>
-                        <aside>
-                            <span>031-582-4210
-                            </span>
-                            <span>경기 가평군 북면 가화로 769 다슬기해장국
-                            </span>
-                            <span>매일 08:00 - 20:30 비정기 휴무
-                            </span>
-                            <span>단체석
-                            </span>
-                        </aside>
+                            가득 들어 있는 속 풀리는 시원한 해장국!
+                        </p>
+                        <ul class="food-info">
+                            <li>
+                                <span><i class="fas fa-phone-alt icon"></i></span>
+                                <span>031-582-4210</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-map-marker-alt icon"></i></span>
+                                <span>경기 가평군 북면 가화로 769 다슬기해장국</span>
+                            </li>
+                            <li>
+                                <span><i class="far fa-clock icon"></i></span>
+                                <span>매일 08:00 - 20:30 비정기 휴무
+                                </span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-store icon"></i></span>
+                                <span>단체석</span>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li>
@@ -204,16 +231,25 @@
                         </h3>
                         <p>뷰맛집 힐링 카페!
                         커피를 통해 잠시나마 마음의 여유를 즐겨 보세요</p>
-                        <aside>
-                            <span>0507-1355-0180
-                            </span>
-                            <span>경기 가평군 가평읍 북한강변로 1016 2층
-                            </span>
-                            <span>매일 10:00 - 19:00 / 주말 10:00 - 20:00
-                            </span>
-                            <span>단체석, 주차, 포장, 예약, 남/녀 화장실 구분, 지역화폐가능
-                            </span>
-                        </aside>
+                        <ul class="food-info">
+                            <li>
+                                <span><i class="fas fa-phone-alt icon"></i></span>
+                                <span>0507-1355-0180</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-map-marker-alt icon"></i></span>
+                                <span>경기 가평군 가평읍 북한강변로 1016 2층</span>
+                            </li>
+                            <li>
+                                <span><i class="far fa-clock icon"></i></span>
+                                <span>매일 10:00 - 19:00 / 주말 10:00 - 20:00
+                                </span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-store icon"></i></span>
+                                <span>단체석, 주차, 포장, 예약, 남/녀 화장실 구분, 지역화폐가능</span>
+                            </li>
+                        </ul>
                     </div>
                 </li>
             </ul>
