--- a/daon/reservation.html
+++ b/daon/reservation.html
@@ -6,53 +6,13 @@
     <title>reservation</title>
     <link href="css/reservation.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
     <header>
-        <article class="head">
-            <h1><a href="index.html">DAON</a></h1>
-
-            <input type="checkbox" class="openmenu" id="openmenu">
-            <label for="openmenu" class="burger">
-                <i class="fa fa-bars"></i>
-            </label>
-
-            <nav class="menu">
-                <ul>
-                    <li>
-                        <a href="prologue.html">ABOUT</a>
-                        <ul class="submenu">
-                            <li><a href="prologue.html">펜션소개</a></li>
-                            <li><a href="travel.html">주변여행지</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="room.html">ROOM</a>
-                        <ul class="submenu">
-                            <li><a href="room.html">미리보기</a></li>
-                            <li><a href="layout.html">펜션배치도</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="bbq.html">SPECIAL</a>
-                        <ul class="submenu">
-                            <li><a href="bbq.html">BBQ</a></li>
-                            <li><a href="swimming.html">야외수영장</a></li>
-                            <li><a href="skypark.html">옥상정원</a></li>
-                            <li><a href="cafeteria.html">카페테리아</a></li>
-                        </ul>
-                    </li>
-                    <li class="last">
-                        <a href="reservation.html">RESERVATION</a>
-                        <ul class="submenu">
-                            <li><a href="reservation.html">예약안내</a></li>
-                            <li><a href="https://bit.ly/38Zeuef">실시간예약</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </article>
+       
     </header>
 
     <main>
