--- a/daon/inc.html
+++ b/daon/inc.html
@@ -12,21 +12,21 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="prologue.html#0">ABOUT</a>
+                    <a href="prologue.html">ABOUT</a>
                     <ul class="submenu">
                         <li><a href="prologue.html">펜션소개</a></li>
                         <li><a href="travel.html">주변여행지</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="room.html#1">ROOM</a>
+                    <a href="room.html">ROOM</a>
                     <ul class="submenu">
                         <li><a href="room.html">미리보기</a></li>
                         <li><a href="layout.html">펜션배치도</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="bbq.html#2">SPECIAL</a>
+                    <a href="bbq.html">SPECIAL</a>
                     <ul class="submenu">
                         <li><a href="bbq.html">BBQ</a></li>
                         <li><a href="swimming.html">야외수영장</a></li>
@@ -35,7 +35,7 @@
                     </ul>
                 </li>
                 <li class="last">
-                    <a href="reservation.html#3">RESERVATION</a>
+                    <a href="reservation.html">RESERVATION</a>
                     <ul class="submenu">
                         <li><a href="reservation.html">예약안내</a></li>
                         <li><a href="https://bit.ly/38Zeuef">실시간예약</a></li>
