--- a/daon/index.html
+++ b/daon/index.html
@@ -57,7 +57,7 @@
 
                 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+<svg class="main_mouse" version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 	 y="0px" viewBox="0 0 237.7 263.34" style="enable-background:new 0 0 237.7 263.34;" xml:space="preserve">
 <path d="M135.11,121.78c0,1.91,0,3.81,0,5.72c0,6.16-4.22,11.33-10.29,12.43c-6.89,1.25-13.07-3.28-14.44-9.66
 	c-0.2-0.92-0.28-1.87-0.29-2.81c-0.03-3.79-0.02-7.57-0.01-11.36c0-6.15,4.17-11.24,10.19-12.44c6.4-1.28,12.97,2.92,14.45,9.31
