--- a/daon/layout.html
+++ b/daon/layout.html
@@ -1,118 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <title>ROOM</title>
     <link href="css/layout.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/25f22587a3.js" crossorigin="anonymous"></script>
+    <link href="imgs/favicon-daon.ico" type="image/x-icon" rel="shortcut icon">
+    <script charset="UTF-8" class="daum_roughmap_loader_script"
+        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/about.js"></script>
+
 </head>
+
 <body>
     <header>
-        <article class="head">
-            <h1><a href="index.html">DAON</a></h1>
 
-            <input type="checkbox" class="openmenu" id="openmenu">
-            <label for="openmenu" class="burger">
-                <i class="fa fa-bars"></i>
-            </label>
-
-            <nav class="menu">
-                <ul>
-                    <li>
-                        <a href="prologue.html">ABOUT</a>
-                        <ul class="submenu">
-                            <li><a href="prologue.html">펜션소개</a></li>
-                            <li><a href="travel.html">주변여행지</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="room.html">ROOM</a>
-                        <ul class="submenu">
-                            <li><a href="room.html">미리보기</a></li>
-                            <li><a href="layout.html">펜션배치도</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="bbq.html">SPECIAL</a>
-                        <ul class="submenu">
-                            <li><a href="bbq.html">BBQ</a></li>
-                            <li><a href="swimming.html">야외수영장</a></li>
-                            <li><a href="skypark.html">옥상정원</a></li>
-                            <li><a href="cafeteria.html">카페테리아</a></li>
-                        </ul>
-                    </li>
-                    <li class="last">
-                        <a href="reservation.html">RESERVATION</a>
-                        <ul class="submenu">
-                            <li><a href="reservation.html">예약안내</a></li>
-                            <li><a href="https://bit.ly/38Zeuef">실시간예약</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </article>
     </header>
 
     <main>
-    
-        <div class="prologue_title">
-            <figure>
-                <img src="imgs/room_title.png" alt="roomtitle">
-                <figcaption>
-                    <p>ROOM</p>
-                    <small>다온 펜션, 객실미리보기</small>
-                </figcaption>
-            </figure>
-        </div>
+        <div class="pWrap">
+            <div class="pContent">
+                <div class="parallax tripwrap">
 
-        <div class="prologue_tab">
-            <ul>
-                <li><a href="room.html">미리보기</a></li>
-                <li class="active"><a href="layout.html">펜션배치도</a></li>
-            </ul>
-        </div>
+                    <div class="pSection01 parall layout01">
+                        <div>
+                            <h2>Landscape</h2>
+                            <p>아름다운 경치와 함께하는 다온펜션</p>
+                            <h4>Enjoy a unique experience on your trip to Busan with the blue sea.</br>
+                                Enjoy this moment as it is that you will never come again.</h4>
+                        </div>
+                        <div>
+                            <?xml version="1.0" encoding="utf-8"?>
+                            <!-- Generator: Adobe Illustrator 23.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                            <svg class="sub_mouse" version="1.1" id="레이어_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                                 y="0px" viewBox="0 0 237.7 263.34" style="enable-background:new 0 0 237.7 263.34;" xml:space="preserve">
+                            <path d="M135.11,121.78c0,1.91,0,3.81,0,5.72c0,6.16-4.22,11.33-10.29,12.43c-6.89,1.25-13.07-3.28-14.44-9.66
+                                c-0.2-0.92-0.28-1.87-0.29-2.81c-0.03-3.79-0.02-7.57-0.01-11.36c0-6.15,4.17-11.24,10.19-12.44c6.4-1.28,12.97,2.92,14.45,9.31
+                                c0.24,1.02,0.34,2.09,0.37,3.14C135.15,117.99,135.11,119.89,135.11,121.78z M111.35,121.76c0,1.97-0.02,3.94,0.01,5.9
+                                c0.01,0.77,0.09,1.54,0.25,2.3c1.01,4.85,5.11,8.35,9.72,8.82c3.27,0.34,6.17-0.55,8.64-2.71c2.6-2.28,3.85-5.2,3.86-8.65
+                                c0-3.76,0.01-7.52-0.01-11.29c0-0.77-0.07-1.54-0.21-2.3c-1.09-6.07-7.19-10.16-13.22-8.91c-5.31,1.1-9.04,5.69-9.04,11.12
+                                C111.35,117.95,111.35,119.85,111.35,121.76z"/>
+                            <path d="M122.6,150.43c1.55-1.26,3.09-2.5,4.63-3.75c2.14-1.73,4.28-3.46,6.41-5.19c0.06-0.05,0.12-0.09,0.18-0.14
+                                c0.31-0.22,0.68-0.18,0.9,0.1c0.22,0.27,0.18,0.65-0.11,0.9c-0.64,0.53-1.29,1.05-1.94,1.58c-3.1,2.51-6.19,5.01-9.29,7.52
+                                c-0.09,0.07-0.17,0.14-0.26,0.21c-0.4,0.32-0.63,0.32-1.03,0.01c-1.74-1.41-3.48-2.82-5.23-4.23c-2.05-1.66-4.1-3.32-6.15-4.98
+                                c-0.05-0.04-0.1-0.08-0.14-0.12c-0.26-0.25-0.3-0.61-0.1-0.87c0.22-0.28,0.6-0.34,0.89-0.11c0.76,0.6,1.51,1.22,2.27,1.83
+                                c2.94,2.38,5.88,4.76,8.82,7.14C122.49,150.35,122.53,150.38,122.6,150.43z" class="down"/>
+                            <path d="M122.59,158.46c1.02-0.83,2.04-1.65,3.05-2.47c2.67-2.16,5.34-4.33,8.01-6.49c0.11-0.09,0.24-0.2,0.37-0.24
+                                c0.3-0.09,0.57,0,0.74,0.28c0.16,0.27,0.09,0.61-0.18,0.83c-0.99,0.81-1.99,1.62-2.99,2.42c-2.82,2.28-5.63,4.56-8.45,6.84
+                                c-0.46,0.37-0.66,0.37-1.11,0.01c-3.8-3.08-7.61-6.16-11.41-9.24c-0.34-0.27-0.4-0.66-0.16-0.95c0.24-0.29,0.62-0.32,0.96-0.04
+                                c2.57,2.07,5.13,4.15,7.69,6.22C120.28,156.58,121.43,157.51,122.59,158.46z" class="down"/>
+                            <path d="M125.11,115.18c0,0.81,0.01,1.62,0,2.43c-0.01,1.4-1.13,2.49-2.53,2.48c-1.38-0.01-2.48-1.1-2.49-2.49
+                                c-0.01-1.63-0.01-3.26,0-4.89c0.01-1.41,1.11-2.51,2.52-2.51c1.4,0,2.5,1.1,2.51,2.51C125.11,113.54,125.11,114.36,125.11,115.18z
+                                 M121.35,115.14c0,0.78,0,1.57,0,2.35c0,0.77,0.5,1.31,1.22,1.32c0.74,0.01,1.26-0.52,1.27-1.31c0-1.57,0-3.14,0-4.71
+                                c0-0.78-0.52-1.33-1.25-1.32c-0.71,0-1.22,0.55-1.23,1.31C121.35,113.57,121.35,114.36,121.35,115.14z"/>
+                            </svg>
+                        </div>
+                    </div>
 
-        <article class="layout_spot">
-            <div class="subtitle">
-                <h2>
-                    <span>Room's Layout</span>
-                </h2>
+                    <div class="pSection02 parall layout02">
+                        <article class="layout_spot">
+                            <div class="spot_txt">
+                                <h3 class="place-title">ROOM's Layout 
+                                    <span>펜션 배치도</span>
+                                </h3>
+                                <p>
+                                    전객실 바다 전망이 한 눈에 보이는
+                                    바다 바로앞에 위치하고 있으며,
+                                    넓은 주차장이 있어 객실별 주차 제한이 없어
+                                    아주 편리하고 번거롭지 않습니다.
+                                </p>
+                            </div>
+
+                            <div class="layout_con1">
+                                <img src="imgs/pension_layout.jpg" alt="pensionlayout">
+                            </div>
+                        </article>
+                    </div> <!-- //trip02 -->
+
+
+                </div>
             </div>
-            <div class="layout_con1">
-                <p>가평 다온 펜션의 펜션 배치도입니다.</p>
-                <span></span>
-                <img src="imgs/pension_layout.jpg" alt="pensionlayout">
-            </div>
-        </article>
+        </div>
 
         <div class="schejule">
             <a href="#">
-                <i class="far fa-clock time"></i>
+                <i class="far fa-bell bell"></i>
             </a>
         </div>
         <div class="fixed">
             <a href="#">
-                <i class="fas fa-arrow-up"></i>
+                <i class="fas fa-chevron-up"></i>
                 <span>TOP</span>
             </a>
         </div>
+
     </main>
 
     <footer>
-        <div class="foot">
-            <div>
-            <p>T.010-3923-0662</p>
-            <ul>
-                <li>주소 : 경기 가평군 가평읍 강변안로 357-187</li>
-                <li>업체명 : 다온</li>
-                <li>대표자 : 박춘하</li>
-                <li>사업자번호 : 286-11-00158</li>
-            </ul>
-            <small>@COPYRIGHT2021</small>
-            <a href="#">개인정보처리방침</a>
-            </div>
-        </div>
+
     </footer>
+
+
+
+
+
+
+
 </body>
+
 </html>
