--- a/daon/reservation.html
+++ b/daon/reservation.html
@@ -30,10 +30,12 @@
 
                     <div class="pSection01 parall reservation01">
                         <div>
-                            <h2>Reservation</h2>
-                            <p>다온펜션 이용 및 예약 가이드</p>
-                            <h4>Enjoy a unique experience on your trip to Busan with the blue sea.</br>
-                                Enjoy this moment as it is that you will never come again.</h4>
+                            <div class="about-inner">
+                                <h2>Reservation</h2>
+                                <p>다온펜션 이용 및 예약 가이드</p>
+                                <h4>Enjoy a unique experience on your trip to Busan with the blue sea.</br>
+                                    Enjoy this moment as it is that you will never come again.</h4>
+                            </div>
                         </div>
                         <div>
                             <?xml version="1.0" encoding="utf-8"?>
@@ -65,7 +67,7 @@
 
                     <div class="pSection02 parall reservation02">
                         <article class="reserv_spot">
-                            <div>
+                            <div class="reserv_spot_01">
                                 <h4>이용안내</h4>
                                 <!-- <img src="imgs/icon_list.png"> -->
                                 <p>실내에서는 절대 금연 입니다.(밖의 흡연장을 이용해 주세요.)</p>
@@ -118,7 +120,11 @@
                             </table>
                             </article>
                             </div>
+                            <footer>
+
+                            </footer>
                         </article>
+       
                     </div> <!-- //trip02 -->
 
 
@@ -140,9 +146,6 @@
 
     </main>
 
-    <footer>
-
-    </footer>
 
 
 
