--- a/daon/travel.html
+++ b/daon/travel.html
@@ -30,10 +30,12 @@
 
                     <div class="pSection01 parall trip01">
                         <div>
-                            <h2>Trip with nature</h2>
-                            <p>자연이 함께하는 여행</p>
-                            <h4>Enjoy a unique experience on your trip to Busan with the blue sea.</br>
-                                Enjoy this moment as it is that you will never come again.</h4>
+                            <div class="about-inner">
+                                <h2>Trip with nature</h2>
+                                <p>자연이 함께하는 여행</p>
+                                <h4>Enjoy a unique experience on your trip to Busan with the blue sea.</br>
+                                    Enjoy this moment as it is that you will never come again.</h4>
+                            </div>
                         </div>
                         <div>
                             <?xml version="1.0" encoding="utf-8"?>
@@ -259,7 +261,9 @@
                                 </ul>
                             </article>
 
+                            <footer>
 
+                            </footer>
 
 
                         </article>
@@ -283,10 +287,6 @@
         </div>
 
     </main>
-
-    <footer>
-
-    </footer>
 
 
 
