--- a/daon/room.html
+++ b/daon/room.html
@@ -65,6 +65,17 @@
                                         c0-0.78-0.52-1.33-1.25-1.32c-0.71,0-1.22,0.55-1.23,1.31C121.35,113.57,121.35,114.36,121.35,115.14z" />
                         </svg>
                     </div>
+                    <div class="schejule">
+                        <a href="#">
+                            <i class="far fa-bell bell"></i>
+                        </a>
+                    </div>
+                    <div class="fixed">
+                        <a href="#">
+                            <i class="fas fa-chevron-up"></i>
+                            <span>TOP</span>
+                        </a>
+                    </div>
                 </div>
             </section>
 
@@ -116,23 +127,12 @@
                     </div>
                 </div>
             </section> <!-- //LOVE102 -->
-            <footer class="contentTop">
+            <div class="contentTop">
+                <footer>
 
-            </footer>
-        
-
-        <div class="schejule">
-            <a href="#">
-                <i class="far fa-bell bell"></i>
-            </a>
+                </footer>
+            </div>
         </div>
-        <div class="fixed">
-            <a href="#">
-                <i class="fas fa-chevron-up"></i>
-                <span>TOP</span>
-            </a>
-        </div>
-    </div>
     </main>
 
 
