--- a/daon/room_03.html
+++ b/daon/room_03.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="pSection02 parall special02">
-                            <aritlce class="special_spot">
+                            <article class="special_spot">
                                 <div class="spot_txt">
                                     <h3 class="place-title">LOVE ROOM 101
                                     </h3>
@@ -149,7 +149,7 @@
                             <footer>
 
                             </footer>
-                            </aritlce>
+                            </article>
                     
                     </div> <!-- //special02 -->
                 </div>
