--- a/daon/prologue.html
+++ b/daon/prologue.html
@@ -40,7 +40,7 @@
                     </p>
                     <p>
                         천혜의 자연경관을 갖춘 경기도 가평
-                        칼봉산을 바라보며 자연과 하나되어
+                        칼봉산을 바라보며<br> 자연과 하나되어
                         힐링 할 수 있는 펜션입니다.
                     </p>
                     <p>
